cr/cr.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-registry-svc
  namespace: cr
spec:
  type: ClusterIP
  selector:
    app: container-registry
  ports:
    - port: 65534
      targetPort: cr-port
