cr/cr.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: container-registry-ingress
  namespace: cr
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cr.federico-paolillo.xyz
        - cr.paolillo-federico.xyz
      secretName: container-registry-tls-secret
  rules:
    - host: cr.federico-paolillo.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: container-registry-svc
                port:
                  name: cr-svc-port
